--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.4.1
   dotted_line: ^3.2.3
   equatable: ^2.0.7
   flutter:
@@ -16,7 +17,6 @@ dependencies:
   get: ^4.7.2
   google_fonts: ^6.2.1
   intl: ^0.20.2
-  responsive_builder: ^0.7.1
   shimmer: ^3.0.0
 
 dev_dependencies:
