--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,24 +7,39 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
-  cached_network_image: ^3.4.1
-  dotted_line: ^3.2.3
-  equatable: ^2.0.7
   flutter:
     sdk: flutter
-  flutter_gen: ^5.10.0
-  flutter_staggered_animations: ^1.1.1
-  get: ^4.7.2
+  
+  # GetX
+  get: ^4.6.6
+
+  # UI & Utilities
   google_fonts: ^6.2.1
-  intl: ^0.20.2
+  intl: ^0.19.0
+  equatable: ^2.0.5
+  cached_network_image: ^3.3.1
+  
+  # UI Polish
   shimmer: ^3.0.0
+  flutter_staggered_animations: ^1.1.1
+  dotted_line: ^3.2.2
+
+  # Database (Drift)
+  drift: ^2.17.0
+  sqlite3_flutter_libs: ^0.5.22
+  path_provider: ^2.1.3
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.5.4
-  flutter_gen_runner: ^5.10.0
+  
+  flutter_lints: ^4.0.0
+
+  # Code Generators
+  build_runner: ^2.4.11
+  flutter_gen_runner: ^5.6.0
+  drift_dev: ^2.17.0
 
 flutter:
   uses-material-design: true
